[package]
name = "warp_post_example"
version = "0.1.0"
authors = ["Marcus Willock <crazcalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
